--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 #         command: sudo chmod +x ./gradlew
 - run:
       name: chmod permissions
-      command: chmod +x ./gradlew
+      command: chmod +x gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
